<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.lovejjfg.easyjump.MainActivity">

        <Button
            android:id="@+id/bt_show_web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/open_browser"
            />


        <Button
            android:id="@+id/bt_t1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/notify_jump_test1"
            />

        <Button
            android:id="@+id/bt_t2"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/notify_jump_test2"
            />

        <Button
            android:id="@+id/bt_web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/notify_jump_web"
            />


        <Button
            android:id="@+id/bt_t11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/jump_test1"
            />

        <Button
            android:id="@+id/bt_t22"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/jump_test2"
            />

        <Button
            android:id="@+id/bt_web1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/jump_web"
            />


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>

